Fixed code smell